# FireDetectdemo

FireDetectdemo/: AiKitDemo_Development Manual.docx  AikitDemo_MultDecoder_FireDetector.doc  Video_translation.docx  readme.txt
FireDetectdemo/FireDetectApp/: CMakeLists.txt  FireDetectApp.cpp  aikit_845_env-1.0.sh  camera_conf.ini
FireDetectdemo/FireDetectApp/ai_client/: CMakeLists.txt
FireDetectdemo/FireDetectApp/ai_client/extend/include/: connect.h  dbg.h  url.h
FireDetectdemo/FireDetectApp/ai_client/extend/lib/: libcurl.so.4  liburiparser.so.1.0.26
FireDetectdemo/FireDetectApp/ai_client/include/: client.h
FireDetectdemo/FireDetectApp/ai_client/src/: Base64.c  ai_client.c  buffer.c  client.c
FireDetectdemo/FireDetectApp/config/: CMakeLists.txt
FireDetectdemo/FireDetectApp/config/src/: param.cpp
FireDetectdemo/FireDetectApp/include/: Base64.h  ai_client.h  mult_decoder.h  param_ops.h  res.h
